# OPP

./: Dockerfile  LICENSE  MANIFEST.in  PROTOCOL.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: demo.py
opp/: __init__.py  cli.py  config.py  models.py  server.py  signature.py  similarity.py  storage.py
tests/: test_e2e.py  test_server.py  test_signature.py  test_similarity.py
